--- a/homepage/style.css
+++ b/homepage/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #e1ddd9;
+	background-color: #eeeeee;
 	font-size: 12px;
 	color:#564b47;
 	padding:20px;
@@ -13,10 +13,16 @@ body {
 	padding: 10px;
 	width: 550px;
 	background-color: #ffffff;
-	border: 1px dashed #564b47;
+	border: 1px solid #aaaaaa;
 }
-#example {
-	text-align: center;
+.example {
 	border: 1px;
 	padding: 20px;
+	border-bottom: 1px solid #555555;
+}
+h1.example {
+	font-size: 70%;
+}
+.example.image {
+	text-align: center;
 }
